# AndroidDevelopment

./: .gitignore  readme.md
Interoperability/JNI/: local.properties
Interoperability/JNI/_01-auto-binding/: readme.md
Interoperability/JNI/_03-with-cmake/src/main/cpp/: CMakeLists.txt
Interoperability/JNI/_03-with-cmake/src/main/cpp/include/: calculator.h  calculator_adapter.h  kzcse_jni_register_RegisterNativeBasic.h
Interoperability/JNI/_03-with-cmake/src/main/cpp/src/: calculator_adapter.cpp  greetings.cpp  main.cpp
Interoperability/NDK/gradle/wrapper/: gradle-wrapper.properties
JNI/: .gitignore  settings.gradle.kts
JNI/_01-auto-binding/src/main/cpp/: kzcse_jni_NativeCode.h
JNI/_02-manual-binding/: readme.md
JNI/_02-manual-binding/src/main/cpp/: calculator.cpp  greetings.cpp
JNI/_03-with-cmake/: readme.md
JNI/gradle/wrapper/: gradle-wrapper.properties
JNI/manual-binding/: readme.md
JNI/manual-binding/src/main/cpp/: main.cpp
NDK/: settings.gradle.kts
NDK/app/: build.gradle.kts
NDK/app/src/main/cpp/: native-lib.cpp
NDK/gradle/: libs.versions.toml
NDKFundamental/app/: build.gradle.kts
NDKFundamental/app/src/main/: AndroidManifest.xml
Testing/UITest/: settings.gradle.kts
Testing/UITest/app/: build.gradle.kts
Testing/UITest/app/src/main/: AndroidManifest.xml
Testing/UITest/gradle/: libs.versions.toml
Testing/UITest/gradle/wrapper/: gradle-wrapper.properties
UITestSamples/app/: build.gradle.kts
basic/: build.gradle.kts  readme.md
basic/src/main/cpp/: NativeCode.cpp  kzcse_jni_NativeCalculator.h  libnativecode.dylib
(+56 files in other folders)
